test/typeCheckTest/fail/test29.ic
class BadLessEq {
	void main (string [] args) {
		boolean leq = true <= false;
	}
}